# code2doc

./: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  ReadMe.md  code2doc.ini  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
docs/: ReadMe.md
docs/code2doc/: ReadMe.md  build_config.md  constants.md  run.md  utils.md
docs/code2doc/renderer/: ReadMe.md
src/code2doc/: __init__.py  build_config.py  builder.py  configurer.py  constants.py  doc_types.py  generator.py  renderer.py  run.py  utils.py
src/code2doc/renderer/: __init__.py  class_renderer.py  function_renderer.py  renderer.py
src/code2doc/test/: constants.py
src/code2doc/test/test123/: abcd.py
