[metadata]
name = code2doc
url = https://github.com/rahulsrma26/code2doc
project_urls =
    Code = https://github.com/rahulsrma26/code2doc
license = LICENSE
platform = any
author = Rahul Sharma
author_email = rahulsrma26@gmail.com
maintainer = rahulsrma26
maintainer_email = welcometors@gmail.com
description = A documentation utility for generating markdowns from docstring
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sharing streaming network setuptools development
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Documentation
    Topic :: Education
    Topic :: Software Development :: Documentation
    Topic :: Text Processing :: Markup :: Markdown
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    code2doc = code2doc.run:main

[bdist_wheel]
universal = 0
